cleanup for codewalk